Fix intro section spacing for mobile view

--- a/css/home.css
+++ b/css/home.css
@@ -264,11 +264,12 @@ main .intro{
 
 @media (max-width: 720px){
   .intro h1{
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .intro h2{
     font-size: 1.5rem;
+    line-height: 2.5rem;
   }
 
   .intro p{
@@ -288,7 +289,7 @@ main .intro{
   .buttons a{
     font-size: 1.5rem;
     padding: 0.5rem 1rem;
-    margin: 1rem 0rem 0rem 0rem !important;
+    margin: 1.5rem 0rem 0rem 0rem !important;
   }
 }
 
@@ -298,12 +299,8 @@ main .intro{
   }
 
   .intro h2{
-    font-size: 1.3rem;
-    margin: 0rem 0rem 1.5rem 0rem;
-  }
-
-  .intro p{
-    font-size: 0.8rem;
+    font-size: 1.5rem;
+    margin: 2rem 0rem 0rem 0rem;
   }
 }
 
